# aegis-client

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
apps/desktop/: .gitignore  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.json
apps/desktop/electron/: main.ts  preload.ts  shared.ts
apps/desktop/src/: window.d.ts
apps/mobile/: README.md
apps/mobile/rust/aegis-mobile-ffi/: Cargo.toml
apps/mobile/rust/aegis-mobile-ffi/src/: lib.rs
apps/mobile/rust/aegis-mobile-ffi/tests/: roundtrip.rs
apps/web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
apps/web/src/: index.css  main.tsx  router.tsx
apps/web/src/components/: ErrorBoundary.tsx  Layout.tsx  VaultSessionPanel.tsx
apps/web/src/lib/: crypto.ts  desktopVault.ts  inboxBadge.ts  platform.ts  relay.ts  storage.ts
apps/web/src/pages/: Compose.tsx  Identity.tsx  Inbox.tsx  Setup.tsx
apps/web/src/test/: crypto.roundtrip.test.ts  fixtures.ts  setup.ts
apps/web/src/test/lib/: desktopVault.test.ts  inboxBadge.test.ts  platform.test.ts
apps/web/src/test/pages/: Compose.test.tsx  Identity.test.tsx  Inbox.test.tsx  Setup.test.tsx
